--- a/beRemote/beRemote/Properties/Resources.resx
+++ b/beRemote/beRemote/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -109,9 +112,129 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MW_RibHelpBtnAbout" xml:space="preserve">
+    <value>About</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibHelpBtnCommunity" xml:space="preserve">
+    <value>Community</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibHelpBtnHelp" xml:space="preserve">
+    <value>Help</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibHelpGrpHelp" xml:space="preserve">
+    <value>Help</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibMenuBtnConnections" xml:space="preserve">
+    <value>Import Connections</value>
+    <comment>Application Menu</comment>
+  </data>
+  <data name="MW_RibMenuBtnFavorites" xml:space="preserve">
+    <value>Manage Favorites</value>
+    <comment>Application Menu</comment>
+  </data>
+  <data name="MW_RibMenuBtnSettings" xml:space="preserve">
+    <value>Settings</value>
+    <comment>Application Menu</comment>
+  </data>
+  <data name="MW_RibMenuClose" xml:space="preserve">
+    <value>Close</value>
+    <comment>Application Menu</comment>
+  </data>
+  <data name="MW_RibServerBtnAdd" xml:space="preserve">
+    <value>Add</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnAddFolder" xml:space="preserve">
+    <value>Add Folder</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnCredentials" xml:space="preserve">
+    <value>Credentials</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnHistory" xml:space="preserve">
+    <value>History</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnRemove" xml:space="preserve">
+    <value>Remove</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnVpn" xml:space="preserve">
+    <value>VPN</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerBtnWhoIsOnline" xml:space="preserve">
+    <value>Who is online</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerGrpConnections" xml:space="preserve">
+    <value>Connections</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerGrpFavorites" xml:space="preserve">
+    <value>Favorites</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerGrpManage" xml:space="preserve">
+    <value>Manage</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibServerGrpMore" xml:space="preserve">
+    <value>More</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibSettingsGrpImport" xml:space="preserve">
+    <value>Import</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibSettingsGrpProfile" xml:space="preserve">
+    <value>Profile</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibSettingsGrpSuperadmin" xml:space="preserve">
+    <value>Superadmin</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibTabHeadHelp" xml:space="preserve">
+    <value>Help</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibTabHeadServer" xml:space="preserve">
+    <value>Server</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibTabHeadSettings" xml:space="preserve">
+    <value>Settings</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibTabHeadToolsAndFeatures" xml:space="preserve">
+    <value>Tools and Features</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
+  <data name="MW_RibTafGrpTools" xml:space="preserve">
+    <value>Tools</value>
+    <comment>Ribbon Default Tools+Features-Group</comment>
+  </data>
+  <data name="MW_TabTitleConnections" xml:space="preserve">
+    <value>Connections</value>
+    <comment>Docking Grid</comment>
+  </data>
+  <data name="MW_TabTitleHistory" xml:space="preserve">
+    <value>History</value>
+    <comment>Docking Grid</comment>
+  </data>
+  <data name="MW_Title" xml:space="preserve">
+    <value>beRemote v2</value>
+    <comment>Ribbon Descriptions</comment>
+  </data>
 </root>
